k8s/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: flask-app-dep
    namespace: default
    labels:
      app: flask-app
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: flask-app
    template:
      metadata:
        labels:
          app: flask-app
      spec:
        containers:
        - name: flask-app
          image: rohioffl/flask_app:latest
          ports:
          - containerPort: 5000
