k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lbsvc
  namespace: default
spec:
  selector:
    app: flask-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
