k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: default
  annotations:  
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: rohitpt.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "flask-svc"
                port:
                  number: 80
